--- a/apps/web/components/Dashboard/Charts/Charts.module.less
+++ b/apps/web/components/Dashboard/Charts/Charts.module.less
@@ -51,6 +51,9 @@
     line-height: 22px;
     color: #3D3D46;
   }
+  :global .ant-table-tbody > tr:last-child {
+    font-weight: bold;
+  }
   @media screen and (max-width: 767px) {
     margin-bottom: 12px;
   }
