--- a/apps/web/pages/dashboard/dashboard.module.less
+++ b/apps/web/pages/dashboard/dashboard.module.less
@@ -64,6 +64,7 @@
           &:hover {
             color: #54B2D3;
             cursor: pointer;
+            text-decoration: underline;
           }
         }
       }
