--- a/libs/ui/src/lib/wizard/Wizard.module.less
+++ b/libs/ui/src/lib/wizard/Wizard.module.less
@@ -10,7 +10,7 @@
 
 .footer {
   padding: 24px;
-  display: grid;
+  display: flex;
   justify-content: space-between;
   align-items: center;
   position: absolute;
