--- a/apps/web/pages/marketing/vouchers/create/index.module.less
+++ b/apps/web/pages/marketing/vouchers/create/index.module.less
@@ -1,4 +1,7 @@
 .mainCreateVoucher {
+  .pl10 {
+    padding-left: 10px;
+  }
   :global {
     .ant-card-head,
     .ant-card-body {
@@ -107,8 +110,36 @@
 
       display: flex;
       // flex-direction: column;
-      justify-content: center;
-      align-items: flex-end;
+      justify-content: flex-end;
+      align-items: center;
+
+      @media screen and (max-width: 767px) {
+        width: 100%;
+        padding: 0px;
+
+        .saveBtn {
+          position: fixed;
+          width: 100%;
+          display: flex;
+          justify-content: center;
+          padding: 10px 15px;
+          background-color: #ffffff;
+          box-shadow: -10px 0px 10px lightgray;
+          bottom: 0px;
+          z-index: 9;
+
+          button {
+            width: 100%;
+          }
+        }
+
+        .emailBtn {
+          width: 100%;
+          padding: 0px 24px;
+          display: flex;
+          justify-content: flex-end;
+        }
+      }
 
       .switchDiv {
         span:first-child {
@@ -195,6 +226,32 @@
           padding: 30px;
           .contDiv {
             margin-bottom: 25px;
+
+            &.customedBefore {
+              label::before {
+                position: absolute;
+              }
+            }
+
+            :global {
+              .ant-form-item-label {
+                padding-bottom: 0px;
+
+                label {
+                  width: 100%;
+                  display: flex;
+                  margin-left: 0px;
+                  justify-content: space-between;
+                  align-items: center;
+                }
+              }
+              .ant-form-item-control {
+                align-items: flex-start;
+                .ant-form-item-control-input {
+                  width: 100%;
+                }
+              }
+            }
             .contHeading {
               font-weight: bold;
               font-size: 16px;
@@ -214,11 +271,6 @@
               line-height: 18px;
               color: #9292a3;
               margin-top: 12.5px;
-            }
-            label {
-              display: flex;
-              justify-content: space-between;
-              align-items: center;
             }
             div {
               display: flex;
