--- a/apps/connect/pages/online-bookings/index.module.less
+++ b/apps/connect/pages/online-bookings/index.module.less
@@ -8,7 +8,7 @@
   height: calc(100% - 128px);
   overflow-y: auto;
   overflow-x: hidden;
-  background: #F7F7F9;
+  background: #f7f7f9;
   .backBut {
     margin-top: 24px;
     width: 100%;
@@ -17,7 +17,7 @@
     line-height: 20px;
     color: #737387;
     .arrowLeft {
-      background: #FFFFFF;
+      background: #ffffff;
       border-radius: 4px;
       padding: 9px;
       margin-right: 12px;
@@ -25,8 +25,8 @@
   }
   .verification {
     width: 560px;
-    background: #FFFFFF;
-    border: 1px solid #F4F5F7;
+    background: #ffffff;
+    border: 1px solid #f4f5f7;
     box-shadow: 2px 2px 17px rgba(9, 20, 41, 0.05);
     border-radius: 4px;
     margin-top: 24px;
@@ -42,14 +42,12 @@
       color: #82d9e1;
     }
   }
-
 }
 
 .onlineBooking {
   height: 100vh;
-  background: #F7F7F9;
+  background: #f7f7f9;
 }
-
 
 //.fadeLeft {
 //  transition: left 5s ease-in-out;
@@ -90,151 +88,150 @@
 //  transition: opacity 500ms, transform 500ms;
 //}
 
-.slide1{
-  animation: slideme1 .3s ease-out ;
+.slide {
+  animation: slideme1 0.3s ease-out;
   @media screen and (max-width: 767px) {
     width: 100%;
   }
   width: auto;
 }
-.slide2{
-  animation: slideme2 .3s ease-out ;
-}
-.slide3{
-  animation: slideme3 .3s ease-out ;
-}
-.slide4{
-  animation: slideme4 .3s ease-out ;
-}
-.slide5{
-  animation: slideme5 .3s ease-out ;
-}
-.slide6{
-  animation: slideme6 .3s ease-out ;
-}
-.slide7{
-  animation: slideme7 .3s ease-out ;
-}
-.slide8{
-  animation: slideme8 .3s ease-out ;
-}
-.slide9{
-    animation: slideme9 .3s ease-out ;
-}
+// .slide2{
+//   animation: slideme2 .3s ease-out ;
+// }
+// .slide3{
+//   animation: slideme3 .3s ease-out ;
+// }
+// .slide4{
+//   animation: slideme4 .3s ease-out ;
+// }
+// .slide5{
+//   animation: slideme5 .3s ease-out ;
+// }
+// .slide6{
+//   animation: slideme6 .3s ease-out ;
+// }
+// .slide7{
+//   animation: slideme7 .3s ease-out ;
+// }
+// .slide8{
+//   animation: slideme8 .3s ease-out ;
+// }
+// .slide9{
+//     animation: slideme9 .3s ease-out ;
+// }
 
-@keyframes slideme1{
-  0%{
-    transform:  translateX(500px);
+@keyframes slideme1 {
+  0% {
+    transform: translateX(500px);
     opacity: 0;
-    @media only screen and (max-width: 767px){
-      transform:  translateX(500px);
+    @media only screen and (max-width: 767px) {
+      transform: translateX(500px);
     }
   }
-  70%{
+  70% {
     opacity: 1;
   }
-  100%{
-    transform:  translateX(0);
+  100% {
+    transform: translateX(0);
   }
 }
 
-@keyframes slideme2{
-  0%{
-    transform:  translateX(500px);
+@keyframes slideme2 {
+  0% {
+    transform: translateX(500px);
     opacity: 0;
   }
-  70%{
+  70% {
     opacity: 1;
   }
-  80%{
-    transform:  translateX(0);
+  80% {
+    transform: translateX(0);
   }
 }
-@keyframes slideme3{
-  0%{
-    transform:  translateX(500px);
+@keyframes slideme3 {
+  0% {
+    transform: translateX(500px);
     opacity: 0;
   }
-  70%{
+  70% {
     opacity: 1;
   }
-  80%{
-    transform:  translateX(0);
+  80% {
+    transform: translateX(0);
   }
 }
-@keyframes slideme4{
-  0%{
-    transform:  translateX(500px);
+@keyframes slideme4 {
+  0% {
+    transform: translateX(500px);
     opacity: 0;
   }
-  70%{
+  70% {
     opacity: 1;
   }
-  80%{
-    transform:  translateX(0);
+  80% {
+    transform: translateX(0);
   }
 }
-@keyframes slideme5{
-  0%{
-    transform:  translateX(500px);
+@keyframes slideme5 {
+  0% {
+    transform: translateX(500px);
     opacity: 0;
   }
-  70%{
+  70% {
     opacity: 1;
   }
-  80%{
-    transform:  translateX(0);
+  80% {
+    transform: translateX(0);
   }
 }
-@keyframes slideme6{
-  0%{
-    transform:  translateX(500px);
+@keyframes slideme6 {
+  0% {
+    transform: translateX(500px);
     opacity: 0;
   }
-  70%{
+  70% {
     opacity: 1;
   }
-  80%{
-    transform:  translateX(0);
+  80% {
+    transform: translateX(0);
   }
 }
-@keyframes slideme7{
-  0%{
-    transform:  translateX(500px);
+@keyframes slideme7 {
+  0% {
+    transform: translateX(500px);
     opacity: 0;
   }
-  70%{
+  70% {
     opacity: 1;
   }
-  80%{
-    transform:  translateX(0);
+  80% {
+    transform: translateX(0);
   }
 }
-@keyframes slideme8{
-  0%{
-    transform:  translateX(500px);
+@keyframes slideme8 {
+  0% {
+    transform: translateX(500px);
     opacity: 0;
   }
-  70%{
+  70% {
     opacity: 1;
   }
-  80%{
-    transform:  translateX(0);
+  80% {
+    transform: translateX(0);
   }
 }
-@keyframes slideme9{
-  0%{
-    transform:  translateX(500px);
+@keyframes slideme9 {
+  0% {
+    transform: translateX(500px);
     opacity: 0;
   }
-  70%{
+  70% {
     opacity: 1;
   }
-  80%{
-    transform:  translateX(0);
+  80% {
+    transform: translateX(0);
   }
 }
-
 
 @media screen and (max-width: 767px) {
   .onlineBooking {
@@ -255,7 +252,7 @@
       margin-bottom: 0;
       margin-top: 0;
       box-shadow: none;
-      border-top: 1px solid #ECEDF0;
+      border-top: 1px solid #ecedf0;
       padding: 24px 20px;
 
       flex-direction: column;
@@ -271,8 +268,8 @@
       line-height: 20px;
       color: #737387;
       .arrowLeft {
-        background: #FFFFFF;
-        border: 1px solid #F4F5F7;
+        background: #ffffff;
+        border: 1px solid #f4f5f7;
         box-sizing: border-box;
         box-shadow: 2px 2px 17px rgba(9, 20, 41, 0.05);
         border-radius: 4px;
@@ -285,9 +282,16 @@
         display: none;
       }
     }
-
   }
-  .slide1, .slide2, .slide3, .slide4, .slide5, .slide7, .slide8 , .slide9, .slide6  {
+  .slide1,
+  .slide2,
+  .slide3,
+  .slide4,
+  .slide5,
+  .slide7,
+  .slide8,
+  .slide9,
+  .slide6 {
     width: 100%;
   }
 }
