resolved-formik-issues-and-frontend-responsiveness

--- a/apps/web/pages/marketing/vouchers/create/index.module.less
+++ b/apps/web/pages/marketing/vouchers/create/index.module.less
@@ -115,30 +115,8 @@
 
       @media screen and (max-width: 767px) {
         width: 100%;
-        padding: 0px;
-
-        .saveBtn {
-          position: fixed;
-          width: 100%;
-          display: flex;
-          justify-content: center;
-          padding: 10px 15px;
-          background-color: #ffffff;
-          box-shadow: -10px 0px 10px lightgray;
-          bottom: 0px;
-          z-index: 9;
-
-          button {
-            width: 100%;
-          }
-        }
-
-        .emailBtn {
-          width: 100%;
-          padding: 0px 24px;
-          display: flex;
-          justify-content: flex-end;
-        }
+        padding-top: 0px !important;
+        justify-content: flex-end !important;
       }
 
       .switchDiv {
@@ -160,12 +138,7 @@
         margin-left: 10px;
       }
       @media screen and (max-width: 525px) {
-        padding: 12.5px 24px 0px 24px;
-        border-top: 1px solid #ecedf0;
         width: 100%;
-        align-items: flex-start;
-        // justify-content: space-between;
-        justify-content: center;
 
         .switchDiv {
           display: flex;
