--- a/libs/ui/src/lib/layout/Layout.module.less
+++ b/libs/ui/src/lib/layout/Layout.module.less
@@ -44,10 +44,7 @@
   }
   :global {
     .ant-layout-header {
-      padding-top: 16px;
-      padding-bottom: 21px;
-      padding-left: 16px;
-      padding-right: 16px;
+      padding: 16px 16px 21px 16px !important;
       position: fixed;
       z-index: 3;
       width: 100%;
