--- a/libs/ui/src/lib/tree-select-check-box/TreeSelectCheckBox.module.less
+++ b/libs/ui/src/lib/tree-select-check-box/TreeSelectCheckBox.module.less
@@ -80,3 +80,17 @@
     }
   }
 }
+
+:global {
+  .ant-tree-treenode {
+    position: relative !important;
+  }
+  .ant-tree-switcher {
+    padding: 0px !important;
+    line-height: 100% !important;
+    padding-top: 3px !important;
+  }
+  .ant-tree-node-content-wrapper {
+    padding: 3px 4px 0 4px !important;
+  }
+}
