--- a/apps/web/pages/marketing/vouchers/create/index.module.less
+++ b/apps/web/pages/marketing/vouchers/create/index.module.less
@@ -314,6 +314,11 @@
 
                   &.selectedColor {
                     border: 2px solid green;
+
+                    span {
+                      color: var(--primary-color);
+                      font-size: 16px;
+                    }
                   }
                 }
                 span {
@@ -328,14 +333,16 @@
                 }
 
                 &:last-child div {
-                  background-image: url('../../../../components/Marketing/CreateGiftVoucher/assets/cloud-upload.png') !important;
                   border: 1px solid #54b2d3 !important;
                   display: flex;
                   justify-content: center;
                   align-items: center;
-                }
-                &:last-child span {
-                  display: none !important;
+
+                  span {
+                    font-size: 19px;
+                    line-height: 100%;
+                    color: var(--primary-color);
+                  }
                 }
               }
               .bgColorTheme {
@@ -360,6 +367,11 @@
 
                   &.selectedColor {
                     border: 2px solid green;
+
+                    span {
+                      color: var(--primary-color);
+                      font-size: 16px;
+                    }
                   }
                 }
               }
