resolved-feedback-issues

--- a/apps/web/pages/marketing/vouchers/create/index.module.less
+++ b/apps/web/pages/marketing/vouchers/create/index.module.less
@@ -442,9 +442,9 @@
             margin-top: 50px;
             margin-bottom: 50px;
 
-            .card {
-              min-width: 500px;
-              max-width: 100% !important;
+            .vCard {
+              width: 100%;
+              max-width: 500px;
             }
           }
         }
