introduction to hooks with shared data

--- a/apps/connect/components/ServicesStep/ServiceSelector.module.less
+++ b/apps/connect/components/ServicesStep/ServiceSelector.module.less
@@ -12,7 +12,7 @@
   padding: 32px;
   .treatmentTabWrapper {
     box-shadow: inset -1px 0px 0px #ecedf0, inset 0px 1px 0px #ecedf0,
-    inset 0px -1px 0px #ecedf0;
+      inset 0px -1px 0px #ecedf0;
     display: flex;
     justify-content: center;
     width: 100%;
@@ -356,6 +356,7 @@
       position: absolute;
       top: -6px;
       right: 6px;
+      color: #54b2d3;
     }
     .activeicon {
       color: #54b2d3;
@@ -570,7 +571,7 @@
     padding: 20px;
     .treatmentTabWrapper {
       box-shadow: inset -1px 0px 0px #ecedf0, inset 0px 1px 0px #ecedf0,
-      inset 0px -1px 0px #ecedf0;
+        inset 0px -1px 0px #ecedf0;
       display: flex;
       justify-content: center;
       width: 100%;
