Completed Appointment/online Appointment and sales data

--- a/apps/web/components/Dashboard/TopBoard/TopBoard.module.less
+++ b/apps/web/components/Dashboard/TopBoard/TopBoard.module.less
@@ -158,7 +158,12 @@
           line-height: 22px;
           color: #3D3D46;
         }
-
+        .label{
+          width: 286px;
+          display: flex;
+          overflow-wrap: anywhere;
+          text-transform: capitalize;
+        }
       }
     }
   }
