resolved-pr-comments

--- a/apps/web/pages/marketing/vouchers/create/index.module.less
+++ b/apps/web/pages/marketing/vouchers/create/index.module.less
@@ -449,6 +449,11 @@
           }
         }
       }
+      .dFlex {
+        display: flex;
+        justify-content: flex-start;
+        align-items: center;
+      }
     }
   }
 }
