resolved-frontend-issues

--- a/apps/web/pages/marketing/vouchers/create/index.module.less
+++ b/apps/web/pages/marketing/vouchers/create/index.module.less
@@ -332,6 +332,13 @@
                   background-size: cover;
                 }
 
+                &:first-child div {
+                  span {
+                    font-size: 19px;
+                    line-height: 100%;
+                  }
+                }
+
                 &:last-child div {
                   border: 1px solid #54b2d3 !important;
                   display: flex;
@@ -373,6 +380,12 @@
                       font-size: 16px;
                     }
                   }
+                }
+                span {
+                  font-weight: normal;
+                  font-size: 14px;
+                  line-height: 18px;
+                  color: #9292a3;
                 }
               }
             }
