Fixed client list and label

--- a/apps/web/pages/clients/clients.module.less
+++ b/apps/web/pages/clients/clients.module.less
@@ -24,7 +24,7 @@
     }
     .filter-button {
       color: #54B2D3;
-      backgroundColor: white;
+      background-color: white;
     }
   }
 }
@@ -159,6 +159,9 @@
         }
       }
     }
+  }
+  .pagination-container {
+    padding: 0px 16px;
   }
 }
 
