--- a/libs/ui/src/lib/form-component/FormComponent.module.less
+++ b/libs/ui/src/lib/form-component/FormComponent.module.less
@@ -551,6 +551,9 @@
       padding: 12px;
       border-bottom: 1px solid #ecedf0;
     }
+    .snomedItem:hover {
+      background: #eef7fb;
+    }
     .snomedTitle {
       font-size: 14px;
       line-height: 22px;
@@ -573,6 +576,12 @@
       float: right;
       text-align: right;
       width: 20%;
+    }
+    .snomedHighLight {
+      color: #54b2d3;
+      font-weight: bolder;
+      background-color: transparent;
+      padding: 0;
     }
   }
 
