--- a/libs/ui/src/lib/form-component/FormComponent.module.less
+++ b/libs/ui/src/lib/form-component/FormComponent.module.less
@@ -75,6 +75,15 @@
 .formTextArea {
   .formTextAreaValue {
     margin-top: 11px;
+    position: relative;
+    .customTextArea {
+      padding-left: 30px;
+    }
+    .macroBtn {
+      position: absolute;
+      bottom: 8px;
+      left: 12px;
+    }
   }
 }
 
