--- a/libs/ui/src/lib/macro-create-modal/MacroCreateModal.module.less
+++ b/libs/ui/src/lib/macro-create-modal/MacroCreateModal.module.less
@@ -6,22 +6,23 @@
   width: 720px !important;
   :global {
     .ant-modal-content {
-      padding-right: 20px;
+      padding-right: 0px;
+      border-radius: 4px 4px 4px 4px;
       .ant-modal-close {
-        font-size: 10px;
-        width: 61px;
-        padding-top: 22px;
+        font-size: 14px;
         .ant-modal-close-x {
-          font-size: 10px;
+          font-size: 14px;
         }
+        color: #9292a3;
       }
       .ant-modal-header {
-        padding: 40px 40px 24px 40px;
+        background-color: #3d3d46;
+        border-radius: 4px 4px 0px 0px;
         .ant-modal-title {
-          font-weight: 500;
-          font-size: 22px;
-          line-height: 28px;
-          color: #3d3d46;
+          font-size: 14px;
+          line-height: 24px;
+          font-weight: normal;
+          color: white;
         }
       }
       .ant-modal-body {
@@ -36,6 +37,9 @@
       height: 100%;
       padding: 10px;
     }
+    .ant-modal-footer {
+      text-align: left;
+    }
   }
   .create-button {
     position: absolute;
@@ -46,6 +50,62 @@
     position: absolute;
     right: 180px;
     top: 35px;
+  }
+  .macro-create-container {
+    padding: 40px 16px;
+    .title-container {
+      width: 100%;
+      height: 40px;
+      position: relative;
+      margin-bottom: 24px;
+      :global {
+        .ant-input {
+          width: 100%;
+          height: 40px;
+          border: 1px solid var(--border-color-base);
+          border-radius: 4px;
+        }
+      }
+      .title {
+        position: absolute;
+        font-family: var(--font-family);
+        font-weight: 400;
+        font-size: 12px;
+        color: var(--light-grey-color);
+        background-color: white;
+        top: -8px;
+        left: 12px;
+        z-index: 1;
+      }
+    }
+
+    .message-container {
+      width: 100%;
+      position: relative;
+      margin-bottom: 24px;
+      :global {
+        .ant-input {
+          width: 100%;
+          border: 1px solid var(--border-color-base);
+          border-radius: 4px;
+        }
+      }
+      .message {
+        position: absolute;
+        font-family: var(--font-family);
+        font-weight: 400;
+        font-size: 12px;
+        color: var(--light-grey-color);
+        background-color: white;
+        top: -8px;
+        left: 12px;
+        z-index: 1;
+      }
+    }
+    .type-container {
+      width: 100%;
+      position: relative;
+    }
   }
 }
 
