--- a/apps/web/pages/activities/index.module.less
+++ b/apps/web/pages/activities/index.module.less
@@ -1506,11 +1506,17 @@
     text-align: center;
     height: 100%;
     width: 100%;
-    p {
+    .title {
       color: var(--grey-text-color);
       font-size: 16px;
       margin-bottom: 0px;
-      margin-top: 24px;
+      margin-top: 10px;
+    }
+    .title-desc {
+      color: #76838f;
+      font-size: 16px;
+      margin-bottom: 0px;
+      margin-top: 10px;
     }
     .space-between-text {
       margin-bottom: 28px;
