fixed no data issue

--- a/apps/web/pages/clients/clients.module.less
+++ b/apps/web/pages/clients/clients.module.less
@@ -106,7 +106,7 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  margin-bottom: 5px;
+  // margin-bottom: 5px;
   margin-right: 0.5rem;
 }
 
@@ -608,7 +608,11 @@
 
 .label-show {
   display: flex;
+  // align-items: center;
   flex-direction: row;
+  p {
+    margin: 0;
+  }
 }
 
 .modified-item {
@@ -617,4 +621,8 @@
       display: none !important;
     }
   }
+}
+
+.contentLabel {
+  color: red;
 }
