--- a/libs/ui/src/lib/macro-modal/MacroModal.module.less
+++ b/libs/ui/src/lib/macro-modal/MacroModal.module.less
@@ -27,6 +27,17 @@
       .ant-modal-body {
         padding: 0px;
       }
+      .ant-tabs-nav {
+        width: 240px !important;
+      }
+      .ant-tabs-tab {
+        .anticon {
+          margin-right: 0px;
+        }
+      }
+      .ant-tabs-tab-btn {
+        width: 100%;
+      }
     }
     .ant-tabs.ant-tabs-left {
       min-height: 40vh !important;
@@ -46,6 +57,15 @@
     position: absolute;
     right: 180px;
     top: 35px;
+  }
+
+  .macro-menu-list-title {
+    position: relative;
+    float: left;
+  }
+  .macro-menu-list-Lock {
+    position: relative;
+    float: right;
   }
 }
 
