--- a/libs/ui/src/lib/macro-manage-modal/MacroManageModal.module.less
+++ b/libs/ui/src/lib/macro-manage-modal/MacroManageModal.module.less
@@ -45,6 +45,49 @@
       padding: 10px;
     }
   }
+  .macro-item-wrap {
+    width: 100%;
+    display: flex;
+    flex-direction: row;
+    .macro-item-title {
+      width: 60%;
+      display: flex;
+      flex-direction: column;
+      align-items: flex-start;
+      padding: 4px;
+      cursor: pointer;
+    }
+    .macro-item-type {
+      width: 5%;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      padding: 7px;
+    }
+    .macro-item-created {
+      width: 35%;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      padding: 4px;
+    }
+    .macro-item-delete {
+      display: flex;
+      flex-direction: column;
+      align-items: flex-end;
+      padding: 7px;
+      border: 1px solid #ecedf0;
+      box-sizing: border-box;
+      border-radius: 24px;
+      cursor: pointer;
+    }
+  }
+  .macro-visibility {
+    width: 120px;
+    position: absolute;
+    right: 80px;
+    top: 35px;
+  }
 }
 
 .macro-manage-content {
