--- a/libs/ui/src/lib/macro-manage-modal/MacroManageModal.module.less
+++ b/libs/ui/src/lib/macro-manage-modal/MacroManageModal.module.less
@@ -28,6 +28,7 @@
       .ant-modal-body {
         padding: 0px;
         max-height: 430px;
+        min-height: 287px;
         overflow: auto;
         .ant-list-split {
           .ant-list-item {
