--- a/libs/ui/src/lib/form-component/FormComponent.module.less
+++ b/libs/ui/src/lib/form-component/FormComponent.module.less
@@ -70,6 +70,81 @@
       }
     }
   }
+  .textFieldWithMacroValue {
+    border: 1px solid #ecedf0;
+    color: rgba(0, 0, 0, 0.65);
+    border-radius: 2px;
+    display: inline-block;
+    background-color: #fff;
+    width: 100%;
+    position: relative;
+    :global {
+      .DraftEditor-root {
+        padding: 0 5px 0px 30px;
+        cursor: text;
+      }
+      .public-DraftStyleDefault-block {
+        margin: 0.6em 0;
+      }
+
+      .Hashtag {
+        color: green;
+      }
+
+      .HashtagList {
+        margin: 2px 0 0 0;
+        list-style-type: none;
+        position: absolute;
+        width: 100%;
+        border: 1px solid #ecedf0;
+        z-index: 1;
+        background-color: white;
+        overflow-y: auto;
+        max-height: 200px;
+        padding-inline-start: 0px;
+      }
+
+      .HashtagListItem {
+        padding: 10px 25px;
+        border-bottom: 1px solid #e4e5e9;
+      }
+
+      .HashtagListItem {
+        .HashtagListItemTitle {
+          font-weight: bold;
+          font-size: 14px;
+        }
+        .HashtagListItemMessage {
+          font-size: 12px;
+        }
+      }
+      .HashtagListItem.current {
+        background-color: #eef7fb;
+        .HashtagListItemTitle {
+          color: blue;
+          font-weight: bold;
+        }
+      }
+    }
+    .macroBtn {
+      position: absolute;
+      bottom: 8px;
+      left: 12px;
+      cursor: pointer;
+    }
+  }
+
+  .textFieldArea {
+    min-height: 200px;
+  }
+
+  .textFieldWithMacroValue:hover {
+    border: 1px solid #54b2d3;
+  }
+
+  .textFieldWithMacroValue:focus {
+    border: 1px solid #54b2d3;
+  }
 }
 
 .formTextArea {
