Added new column and added sorting and searching, resolved activity icon design, also implemented address group

--- a/apps/web/pages/activities/index.module.less
+++ b/apps/web/pages/activities/index.module.less
@@ -1031,6 +1031,9 @@
 .cellFormater{
   text-overflow: ellipsis;
   overflow: hidden;
+  .client-icon, .lead-icon {
+    margin-right: 10px;
+  }
 }
 .editable-cell-value-wrap {
   padding-right: 0;
