--- a/libs/ui/src/lib/form-component/FormComponent.module.less
+++ b/libs/ui/src/lib/form-component/FormComponent.module.less
@@ -97,7 +97,7 @@
         position: absolute;
         width: 100%;
         border: 1px solid #ecedf0;
-        z-index: 1;
+        z-index: 10000000;
         background-color: white;
         overflow-y: auto;
         max-height: 200px;
