--- a/libs/ui/src/lib/table/Table.module.less
+++ b/libs/ui/src/lib/table/Table.module.less
@@ -203,7 +203,7 @@
 }
 
 @media screen and (max-width: 767px) {
-  :global .ant-table-sticky-scroll {
+  .noStickyScroll :global .ant-table-sticky-scroll {
     display: none;
   }
 }
