--- a/libs/ui/src/lib/team-report/TeamReport.module.less
+++ b/libs/ui/src/lib/team-report/TeamReport.module.less
@@ -1,7 +1,7 @@
 .ant-table-section-cell {
   font-size: 12px;
 }
-:global .ant-table.ant-table-small {
+.smallTable :global .ant-table.ant-table-small {
   .ant-table-body {
     overflow: auto !important;
     &::-webkit-scrollbar {
