--- a/libs/ui/src/lib/voucher-card/VoucherCard.module.less
+++ b/libs/ui/src/lib/voucher-card/VoucherCard.module.less
@@ -1,13 +1,14 @@
 .voucherCardMain {
-  width: 100%;
-  :global {
-    .flip-card {
-      background-color: transparent;
-      perspective: 1000px;
-      border-radius: 5px;
-    }
+  &.w100,
+  .w100 {
+    width: 100%;
+  }
+  .flipCard {
+    background-color: transparent;
+    perspective: 1000px;
+    border-radius: 5px;
 
-    .flip-card-inner {
+    .flipCardInner {
       position: relative;
       width: 100%;
       height: 100%;
@@ -15,18 +16,15 @@
       transition: transform 0.6s;
       transform-style: preserve-3d;
       border-radius: 5px;
-    }
-
-    .flip-card:hover .flip-card-inner {
       cursor: pointer;
     }
 
-    .flip-card .flip {
+    :global .flip {
       transform: rotateY(180deg);
     }
 
-    .flip-card-front,
-    .flip-card-back {
+    .flipCardFront,
+    .flipCardBack {
       position: absolute;
       width: 100%;
       height: 100%;
@@ -35,142 +33,92 @@
       border-radius: 5px;
     }
 
-    .flip-card-front {
+    .flipCardFront {
       background-size: cover;
       background-position: center;
       background-repeat: no-repeat;
       border-color: transparent !important;
       border-radius: 10px;
 
-      .dot1,
-      .dot2 {
+      .leftClipper,
+      .rightClipper {
         border-color: transparent !important;
+      }
+
+      &.valentine {
+        background-image: url('./assets/valentine.png');
+        background-blend-mode: lighten;
+
+        h1,
+        h2,
+        p,
+        span {
+          color: #d12c28 !important;
+        }
+        button.ant-btn-default {
+          border-color: #d12c28 !important;
+        }
+      }
+
+      &.birthday {
+        background-image: url('./assets/birthday.png');
+        background-blend-mode: lighten;
+      }
+
+      &.flowers {
+        background-image: url('./assets/flowers.png');
+        background-blend-mode: lighten;
       }
     }
 
-    .flip-card-back {
+    .flipCardBack {
       -webkit-backface-visibility: hidden;
       backface-visibility: hidden;
       background: #ffffff !important;
       border-style: solid;
       border-width: 2px;
-      transform: rotateY(180deg);
-    }
-
-    .scene {
-      min-width: 250px;
-      min-height: 125px;
-      perspective: 1000px;
-    }
-
-    .card {
-      position: relative;
-      width: 100%;
-      height: 100%;
-      transform-style: preserve-3d;
-      transition: transform 0.6s;
-      border-radius: 5px;
-    }
-
-    .card:hover.is-flipped {
-      transform: rotateY(180deg);
-    }
-
-    .card__face {
-      position: absolute;
-      width: 100%;
-      height: 100%;
-      backface-visibility: hidden;
-      border-radius: 5px;
-      border-width: 2px;
-      border-style: solid;
-    }
-
-    .card__face--front {
-      background-size: cover;
-      background-position: center;
-      background-repeat: no-repeat;
-      border-color: transparent !important;
-      border-radius: 10px;
-
-      .dot1,
-      .dot2 {
-        border-color: transparent !important;
-      }
-    }
-    .flip-card-front.valentine {
-      background-image: url('./assets/valentine.png');
-      background-blend-mode: lighten;
-
-      h1,
-      h2,
-      p,
-      span {
-        color: #d12c28 !important;
-      }
-      button.ant-btn-default {
-        border-color: #d12c28 !important;
-      }
-    }
-
-    .flip-card-front.birthday {
-      background-image: url('./assets/birthday.png');
-      background-blend-mode: lighten;
-    }
-
-    .flip-card-front.flowers {
-      background-image: url('./assets/flowers.png');
-      background-blend-mode: lighten;
-    }
-
-    .card__face--back {
-      -webkit-backface-visibility: hidden;
-      backface-visibility: hidden;
-      background: #ffffff !important;
       transform: rotateY(180deg);
     }
   }
 
-  .dots {
+  .sideClippers {
     position: absolute;
     height: 100%;
     width: 100%;
 
-    &.bg-opacity {
+    &.bgOpacity {
       background-color: rgba(0, 0, 0, 0.25);
       border-radius: 10px;
     }
 
-    :global {
-      .dotsInner {
-        position: relative;
-        height: 100%;
-        width: 100%;
-        display: flex;
-        justify-content: space-between;
-        align-items: center;
+    .clippersInner {
+      position: relative;
+      height: 100%;
+      width: 100%;
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
 
-        .dot1,
-        .dot2 {
-          min-height: 10px;
-          min-width: 5px;
-          border-style: solid;
-          border-width: 2px;
-          background-color: #ffffff;
-        }
+      .leftClipper,
+      .rightClipper {
+        min-height: 10px;
+        min-width: 5px;
+        border-style: solid;
+        border-width: 2px;
+        background-color: #ffffff;
+      }
 
-        .dot1 {
-          border-top-right-radius: 100px;
-          border-bottom-right-radius: 100px;
-          margin-left: -1.75px;
-          border-left: none;
-        }
-        .dot2 {
-          border-top-left-radius: 100px;
-          border-bottom-left-radius: 100px;
-          margin-right: -1.5px;
-          border-right: none;
-        }
+      .leftClipper {
+        border-top-right-radius: 100px;
+        border-bottom-right-radius: 100px;
+        margin-left: -1.75px;
+        border-left: none;
+      }
+      .rightClipper {
+        border-top-left-radius: 100px;
+        border-bottom-left-radius: 100px;
+        margin-right: -1.5px;
+        border-right: none;
       }
     }
   }
@@ -338,7 +286,7 @@
     :global {
       div {
         display: flex;
-        justify-content: space-evenly;
+        justify-content: flex-start;
         align-items: center;
         flex-direction: column;
         height: 100%;
