resoled-voucher-type-less-issue

--- a/libs/ui/src/lib/voucher-card/VoucherCard.module.less
+++ b/libs/ui/src/lib/voucher-card/VoucherCard.module.less
@@ -44,8 +44,10 @@
       .rightClipper {
         border-color: transparent !important;
       }
+    }
 
-      &.valentine {
+    :global {
+      .valentine {
         background-image: url('./assets/valentine.png');
         background-blend-mode: lighten;
 
@@ -60,12 +62,12 @@
         }
       }
 
-      &.birthday {
+      .birthday {
         background-image: url('./assets/birthday.png');
         background-blend-mode: lighten;
       }
 
-      &.flowers {
+      .flowers {
         background-image: url('./assets/flowers.png');
         background-blend-mode: lighten;
       }
