--- a/libs/ui/src/lib/macro-modal/MacroModal.module.less
+++ b/libs/ui/src/lib/macro-modal/MacroModal.module.less
@@ -87,7 +87,14 @@
         width: 100%;
       }
     }
-    .macro-list-item:hover {
+    // .macro-list-item:hover {
+    //   background-color: #eef7fb;
+    //   color: #54b2d3;
+    //   .macro-list-padding {
+    //     background-color: #54b2d3;
+    //   }
+    // }
+    .macro-list-item.current {
       background-color: #eef7fb;
       color: #54b2d3;
       .macro-list-padding {
