--- a/libs/ui/src/lib/form-component/FormComponent.module.less
+++ b/libs/ui/src/lib/form-component/FormComponent.module.less
@@ -9,6 +9,49 @@
     display: flex;
     align-items: center;
     color: #3d3d46;
+
+    :global {
+      .ant-btn {
+        font-size: 0.8rem;
+        border-radius: 4px;
+        letter-spacing: 0.05em;
+        padding-left: 1em;
+        padding-right: 1em;
+        line-height: 1.5715;
+        position: relative;
+        display: inline-block;
+        font-weight: 400;
+        white-space: nowrap;
+        text-align: center;
+        cursor: pointer;
+        transition: all 0.3s cubic-bezier(0.645, 0.045, 0.355, 1);
+        user-select: none;
+        touch-action: manipulation;
+      }
+      .ant-btn-danger {
+        color: #7f4d0d;
+        background: #ffe1b3;
+        border-color: #e9cda3;
+        text-shadow: 0 -1px 0 rgb(0 0 0 / 12%);
+        box-shadow: 0 2px 0 rgb(0 0 0 / 5%);
+      }
+      .ant-btn-primary {
+        color: #7a787a;
+        background: #eeedef;
+        border-color: #d4d3d5;
+        text-shadow: 0 -1px 0 rgb(0 0 0 / 12%);
+        box-shadow: 0 2px 0 rgb(0 0 0 / 5%);
+      }
+      .ant-btn-sm {
+        height: 18px;
+        padding: 0px 3px;
+        font-size: 11px;
+        border-radius: 2px;
+      }
+      .ant-checkbox {
+        display: inline-block;
+      }
+    }
   }
   .formComponentDescription {
     font-style: normal;
@@ -116,9 +159,19 @@
         }
         .HashtagListItemMessage {
           font-size: 12px;
+          white-space: nowrap;
+          overflow: hidden;
+          text-overflow: ellipsis;
         }
       }
       .HashtagListItem.current {
+        background-color: #eef7fb;
+        .HashtagListItemTitle {
+          color: blue;
+          font-weight: bold;
+        }
+      }
+      .HashtagListItem:hover {
         background-color: #eef7fb;
         .HashtagListItemTitle {
           color: blue;
