--- a/apps/web/pages/activities/index.module.less
+++ b/apps/web/pages/activities/index.module.less
@@ -122,14 +122,22 @@
             th {
               padding: 0;
               .activityText {
-                padding: 0 0 0 16px;
+                padding: 0 16px;
                 display: flex;
+              }
+              .dragHandler {
+                display: -webkit-box;
+               -webkit-line-clamp: 1;
+               -webkit-box-orient: vertical;
+                cursor: grab;
+                text-overflow: ellipsis;
+                overflow: hidden;
+                align-items: center;
               }
               .ant-table-column-sorters {
                 flex: 1;
                 display: flex;
                 height: 100%;
-                padding: 0 16px;
                 .ant-table-column-sorter-full {
                   margin-left: 5px;
                 }
@@ -138,14 +146,7 @@
                   flex: 1;
                   align-items: center;
                   display: flex;
-                  .dragHandler {
-                    height: 100%;
-                    flex: 1;
-                    align-items: center;
-                    display: flex;
-                    padding-left: 13px;
-                  }
-                }
+                } 
               }
               border-right: 2px solid #F1F1F1;
               &:hover{
@@ -161,6 +162,9 @@
           tr {
             td {
               padding: 6px 13px !important;
+              text-overflow: ellipsis;
+              overflow: hidden;
+              white-space: nowrap;
 
               &:hover {
                 background: #EEF7FB;
@@ -182,6 +186,7 @@
     display: flex;
     color: #54B2D3;
     align-items: center;
+    width: 100%;
     .dot-wrapper {
       text-overflow: ellipsis;
       overflow: hidden;
@@ -210,8 +215,54 @@
 
     }
   }
-  .done-row-class {
+  .done-row {
     text-decoration-line: line-through;
+  }
+  .today-row {
+    :global {
+      .ant-table-cell {
+        color: #0c923e !important;
+      }
+    }
+    .editable-cell-value-wrap {
+      .text-ele {
+        .cellFormater {
+          a {
+            color: #0c923e;
+          }
+        }
+        .subject-wrapper {
+          color: #0c923e !important;
+          svg {
+            path {
+              fill: #0c923e;
+            }
+          }
+        }
+      }
+    }
+  }
+  .overdue-row {
+    :global .ant-table-cell {
+      color: #f94839 !important;
+    }
+    .editable-cell-value-wrap {
+      .text-ele {
+        .cellFormater {
+          a {
+            color: #f94839;
+          }
+        }
+        .subject-wrapper {
+          color: #f94839 !important;
+          svg {
+            path {
+              fill: #f94839;
+            }
+          }
+        }
+      }
+    }
   }
   .label-button {
     cursor: default !important;
@@ -282,9 +333,6 @@
     white-space: nowrap;
     max-width: 50px;
     flex: 1 auto;
-    &:first-child {
-      max-width: 30px;
-    }
   }
   :global .ant-table-thead .ant-table-cell {
     color: #9292a3;
@@ -980,7 +1028,16 @@
     }
   }
 }
-
+.cellFormater{
+  text-overflow: ellipsis;
+  overflow: hidden;
+  .link {
+    text-decoration: underline;
+  }
+  .client-icon, .lead-icon {
+    margin-right: 10px;
+  }
+}
 .editable-cell-value-wrap {
   padding-right: 0;
   display: flex;
@@ -1455,11 +1512,17 @@
     text-align: center;
     height: 100%;
     width: 100%;
-    p {
+    .title {
       color: var(--grey-text-color);
       font-size: 16px;
       margin-bottom: 0px;
-      margin-top: 24px;
+      margin-top: 10px;
+    }
+    .title-desc {
+      color: #76838f;
+      font-size: 16px;
+      margin-bottom: 0px;
+      margin-top: 10px;
     }
     .space-between-text {
       margin-bottom: 28px;
@@ -1524,3 +1587,21 @@
   position: relative;
 }
 
+.address-collapse {
+  :global {
+    .ant-collapse-item {
+      .ant-collapse-header {
+        padding: 5px 0 10px 24px; 
+        .anticon-caret-right {
+          left: 4px;
+          top: -2px;
+        }
+      }
+      .ant-collapse-content {
+        .ant-collapse-content-box {
+          padding:0 0 0 22px;
+        }
+      }
+    }
+  }
+}
