--- a/apps/web/pages/marketing/reviews.module.less
+++ b/apps/web/pages/marketing/reviews.module.less
@@ -891,6 +891,11 @@
 .filter-menu {
   .filter-menu-item {
     margin-bottom: 15px;
+    .simple-dropdown{
+      :global .ant-select-selection-item{
+        color: var(--light-grey-text-color);
+      }
+    }
   }
 
   .filter-apply-btn {
