--- a/libs/ui/src/lib/menu/Menu.module.less
+++ b/libs/ui/src/lib/menu/Menu.module.less
@@ -1,4 +1,3 @@
-
 .pabau-sidebar {
   user-select: none;
   background: #ffffff !important;
@@ -8,6 +7,16 @@
       color: var(--light-grey-color);
       &:after {
         display: none;
+      }
+    }
+    .menuSelected {
+      & > span > a {
+        color: var(--primary-color);
+      }
+      :global {
+        .anticon {
+          color: var(--primary-color);
+        }
       }
     }
   }
@@ -51,6 +60,19 @@
     font-family: 'Circular-Std-Book';
     font-weight: 400;
     overflow: visible;
+    display: flex;
+    align-items: center;
+    .activity-icon {
+      width: 19px;
+      margin-left: -2px;
+    }
+      :global &.ant-menu-item-selected  {
+        .ant-menu-item-icon {
+          .activity-icon {
+            padding-top: 5px;    
+          }
+        }
+      }
     a {
       color: var(--light-grey-color);
     }
@@ -81,6 +103,14 @@
     min-width: 152px;
     height: 32px;
     text-align: center;
+    display: flex;
+    align-items: center;
+  }
+  .setup-btn-active {
+    border: 1px solid var(--primary-color);
+    & > span {
+      color: var(--primary-color);
+    }
   }
   .sidebar-btn-align {
     display: flex;
@@ -115,8 +145,4 @@
   .mobile-view-none {
     display: none;
   }
-}
-
-.activity-icon {
-  width: 18px;
 }
